# economicon

./: .env  .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  TODO.md  app_build.ps1  app_launch.bat  economicon.code-workspace  portable_build.ps1  react_build.ps1
ApiServer/: .gitignore  MIGRATION_GUIDE.md  convert_tests.py  final_fix.py  fix_indent.py  fix_syntax.py  fix_tests.py  main.py  pyproject.toml
ApiServer/analysisapp/: db.sqlite3  exception_handlers.py
ApiServer/analysisapp/analysisapp/: settings.py  urls.py
ApiServer/analysisapp/api/: apps.py  urls.py
ApiServer/analysisapp/i18n/: __init__.py  translation.py
ApiServer/analysisapp/locales/: messages.pot
ApiServer/analysisapp/routers/: __init__.py  columns.py  confidence_interval.py  create_simulation_data_table.py  create_union_table.py  data_io.py  delete_table.py  duplicate_table.py  files.py  filter_single_condition.py  get_column_list.py  import_excel_by_path.py  import_parquet_by_file.py  import_tsv_by_file.py  linear_regression.py  operations.py  probit_regression.py  regressions.py  settings.py  sort_columns.py  statistics.py  tables.py  unified_regression.py  variable_effects_estimation.py
ApiServer/analysisapp/schemas/: __init__.py  column.py  columns.py  common.py  data_io.py  files.py  imports.py  operations.py  regression.py  regressions.py  settings.py  statistics.py  tables.py
ApiServer/analysisapp/services/: __init__.py  abstract_api.py  add_column.py  add_dummy_column.py  add_lag_lead_column.py  add_simulation_column.py  calculate_column.py  clear_tables.py  confidence_interval.py  create_join_table.py  create_simulation_data_table.py  create_table.py  create_union_table.py  delete_column.py  delete_table.py  descriptive_statistics.py  django_compat.py  duplicate_column.py  duplicate_table.py  export_csv_by_path.py  export_excel_by_path.py  export_parquet_by_path.py  fetch_data_to_arrow.py  fetch_data_to_json.py  filter_single_condition.py  fixed_effects_estimation.py  get_column_list.py  get_files.py  get_settings.py  get_table_list.py  import_csv_by_file.py  import_csv_by_path.py  import_excel_by_file.py  import_excel_by_path.py  import_parquet_by_file.py  import_parquet_by_path.py  import_tsv_by_file.py  input_cell_data.py  linear_regression.py  logistic_regression.py  (+7 more)
ApiServer/analysisapp/utils/: __init__.py  create_log.py  create_response.py
ApiServer/python-requirements/: ubuntu-requirements.txt  windows-requirements.txt
ApiServer/tests/: conftest.py  test_add_column.py  test_add_dummy_column.py  test_add_lag_lead_column.py  test_add_simulation_column.py  test_analysis_result_store.py  test_babel_integration.py  test_calculate_column.py  test_clear_tables.py  test_confidence_interval.py  test_create_join_table.py  test_create_simulation_data_table.py  test_create_table.py  test_create_union_table.py  test_delete_column.py  test_delete_table.py  test_descriptive_statistics.py  test_duplicate_column.py  test_duplicate_table.py  test_export_csv_by_path.py  test_export_excel_by_path.py  test_export_parquet_by_path.py  test_fetch_data_to_arrow.py  test_fetch_data_to_json.py  test_filter_single_condition.py  test_fixed_effects_estimation.py  test_get_column_list.py  test_get_files.py  test_get_settings.py  test_get_table_list.py  test_import_csv_by_file.py  test_import_csv_by_path.py  test_import_excel_by_file.py  test_import_excel_by_path.py  test_import_parquet_by_file.py  test_import_parquet_by_path.py  test_import_tsv_by_file.py  test_input_cell_data.py  test_linear_regression.py  test_logistic_regression.py  (+11 more)
api/: .coverage  .gitignore  gen_openapi.py  main.py  pyproject.toml  tests_output.txt
api/analysisapp/routers/: data_io.py
api/analysisapp/schemas/: __init__.py  columns.py  tables.py
api/analysisapp/utils/: response.py
api/economicon/: exception_handlers.py
api/economicon/core/: __init__.py  auth.py  encodings.py  enums.py  exceptions.py  messages.py
api/economicon/exceptions/: api_error.py
api/economicon/i18n/: __init__.py  translation.py
api/economicon/locales/: messages.pot
api/economicon/models/: __init__.py  columns.py  common.py  data_io.py  entities.py  enums.py  regressions.py  schemas.py  settings.py  shutdown.py  statistics.py  tables.py  types.py
api/economicon/routers/: __init__.py  columns.py  data_io.py  did.py  files.py  heckman_regression.py  rdd.py  regressions.py  results.py  settings.py  shutdown.py  statistics.py  tables.py
api/economicon/schemas/: __init__.py  columns.py  common.py  data_io.py  did.py  distribution_params.py  entities.py  enums.py  files.py  heckman.py  rdd.py  regression_params.py  regressions.py  result_management.py  result_output.py  results.py  schema_validators.py  settings.py  shared_entities.py  shutdown.py  standard_error_settings.py  statistics.py  tables.py  transform_params.py  types.py
api/economicon/services/: __init__.py  operation.py
api/economicon/utils/: __init__.py  column_names.py  (+3 more)
api/specs/: did-analysis.md
api/tests/: conftest.py  test_add_column.py  test_add_dummy_column.py  test_add_lag_lead_column.py  test_add_simulation_column.py  test_analysis_result_store.py  test_calculate_column.py  test_clear_tables.py  test_confidence_interval.py  test_create_join_table.py  test_create_simulation_data_table.py  test_create_table.py  test_create_union_table.py  test_delete_column.py  test_delete_table.py  test_descriptive_statistics.py  test_did.py  test_duplicate_column.py  test_duplicate_table.py  test_export_csv_by_path.py  test_export_excel_by_path.py  test_export_parquet_by_path.py  test_fetch_data_to_arrow.py  test_fetch_data_to_json.py  test_filter_single_condition.py  test_get_column_list.py  test_get_files.py  test_get_settings.py  test_get_table_list.py  test_import_csv_by_path.py  test_import_excel_by_path.py  test_import_parquet_by_path.py  test_input_cell_data.py  test_regression.py  test_rename_column.py  test_rename_table.py  test_sort_columns.py  test_transform_column.py  test_validate_required_translation.py
app/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
(+1785 files in other folders)
