[project]
name = "apiserver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "coverage>=7.13.1",
    "fastapi>=0.128.0",
    "fastexcel>=0.18.0",
    "numpy>=2.4.0",
    "pip-licenses>=5.5.0",
    "pipdeptree>=2.30.0",
    "polars>=1.36.1",
    "pyinstaller>=6.17.0",
    "python-magic-bin>=0.4.14",
    "python-multipart>=0.0.21",
    "pyyaml>=6.0.3",
    "scipy>=1.16.3",
    "statsmodels>=0.14.6",
    "uvicorn[standard]>=0.40.0",
    "wooldridge>=0.5.0",
    "xlsxwriter>=3.2.9",
]
