[package]
name = "Economicon"
version = "0.2.0"
description = "An Econometrics App"
authors = ["masahiroyecon1997dev"]
license = "MIT"
repository = "https://github.com/masahiroyecon1997dev/economicon"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
tokio = { version = "1", features = ["full"] }
thiserror = "2.0"
dunce = "1.0.5"
uuid = { version = "1", features = ["v4"] }
tauri-plugin-shell = "2"
