[package]
name = "Economicon"
version = "0.3.0"
description = "An Econometrics App"
authors = ["masahiroyecon1997dev"]
license = "MIT"
repository = "https://github.com/masahiroyecon1997dev/economicon"
edition = "2021"
rust-version = "1.95.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "=2.5.6", features = [] }

[dependencies]
serde_json = "=1.0.149"
serde = { version = "=1.0.228", features = ["derive"] }
log = "=0.4.29"
tauri = { version = "=2.10.3", features = [] }
tauri-plugin-log = "=2.8.0"
tauri-plugin-opener = "=2.5.3"
reqwest = { version = "=0.13.2", features = ["json", "multipart", "stream"] }
tokio = { version = "=1.51.1", features = ["full"] }
thiserror = "=2.0.18"
dunce = "=1.0.5"
uuid = { version = "=1.23.0", features = ["v4"] }
tauri-plugin-shell = "=2.3.5"
